--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -5,7 +5,7 @@
         <!-- Customize your theme here. -->
         <item name="colorPrimary">@color/colorPrimary</item>
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
-        <item name="colorAccent">@color/colorAccent</item>
+        <item name="colorAccent">@color/whitesmoke</item>
     </style>
 
     <style name="linearLayoutStyle" parent="@android:style/Theme">
@@ -16,13 +16,13 @@
         <item name="android:paddingRight">@dimen/activity_horizontal_margin</item>
         <item name="android:paddingTop">@dimen/activity_vertical_margin</item>
         <item name="android:orientation">vertical</item>
-        <item name="android:background">@color/black</item>
+        <item name="android:background">@color/dodgerblue</item>
     </style>
 
     <style name="textViewStyle" parent = "@android:style/TextAppearance">
         <item name="android:layout_width">match_parent</item>
         <item name="android:layout_height">wrap_content</item>
-        <item name="android:textColor">@color/colorPrimaryDark</item>
+        <item name="android:textColor">@color/whitesmoke</item>
         <item name="android:gravity">center</item>
     </style>
 
