--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -3,7 +3,7 @@
     <!-- Base application theme. -->
     <style name="AppTheme" parent="Theme.AppCompat.Light.DarkActionBar">
         <!-- Customize your theme here. -->
-        <item name="colorPrimary">@color/colorPrimary</item>
+        <item name="colorPrimary">@color/black</item>
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
         <item name="colorAccent">@color/whitesmoke</item>
     </style>
@@ -16,6 +16,8 @@
         <item name="android:paddingRight">@dimen/activity_horizontal_margin</item>
         <item name="android:paddingTop">@dimen/activity_vertical_margin</item>
         <item name="android:orientation">vertical</item>
+        <item name="android:backgroundDimEnabled">true</item>
+        <item name="android:backgroundDimAmount">100</item>
         <item name="android:background">@color/dodgerblue</item>
     </style>
 
@@ -28,6 +30,10 @@
 
     <style name="textViewStyle.Title">
         <item name="android:textSize">30sp</item>
+        <item name="android:shadowColor">@color/darkblue</item>
+        <item name="android:shadowRadius">13</item>
+        <item name="android:shadowDx">13</item>
+        <item name="android:shadowDy">13</item>
     </style>
 
     <style name="textViewStyle.Content">
