--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -16,9 +16,7 @@
         <item name="android:paddingRight">@dimen/activity_horizontal_margin</item>
         <item name="android:paddingTop">@dimen/activity_vertical_margin</item>
         <item name="android:orientation">vertical</item>
-        <item name="android:backgroundDimEnabled">true</item>
-        <item name="android:backgroundDimAmount">100</item>
-        <item name="android:background">@color/dodgerblue</item>
+        <item name="android:background">@drawable/fondo</item>
     </style>
 
     <style name="textViewStyle" parent = "@android:style/TextAppearance">
